Integrated API, passed data as an object to component, added PropTypes for validation and props handling

--- a/src/assets/components/movieCard.css
+++ b/src/assets/components/movieCard.css
@@ -43,7 +43,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 0.875rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+    background: linear-gradient(45deg, #ff4b2b2c, #ff416d38);
     color: rgba(255, 255, 255, 0.8);
 }
 
@@ -54,7 +56,11 @@
 }
 
 .movierating{
-    display: flex;
-align-items: center;
-font-size: 0.875rem;
-color: rgba(255, 255, 255, 0.8);}
+ 
+position: absolute;
+left: 15px;
+top: -10px;
+color: white;
+font-size: 1.7rem;
+font-weight: 600;
+}
