--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,16 @@ html {
 
 
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
+main {
+  background: #121212;
+
+  flex: 1;
+}
